--- a/ProjectSwift/Home/View/PersonCenterItemCell.xib
+++ b/ProjectSwift/Home/View/PersonCenterItemCell.xib
@@ -1,18 +1,80 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PersonCenterItemCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PersonCenterItemCell" customModule="ProjectSwift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="199"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGA-bE-9db">
+                        <rect key="frame" x="29" y="23" width="50" height="50"/>
+                        <state key="normal" image="myBill.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="8Vu-X1-eD1"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaa-5S-85t">
+                        <rect key="frame" x="135" y="22" width="51" height="51"/>
+                        <state key="normal" image="addCar.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZXk-Ab-dxu"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEz-5P-a5p">
+                        <rect key="frame" x="247" y="23" width="51" height="51"/>
+                        <state key="normal" image="orgSel.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="LEC-gx-Tks"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7iz-96-287">
+                        <rect key="frame" x="29" y="107" width="51" height="51"/>
+                        <state key="normal" image="coupons.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pn2-12-XLD"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82L-By-RTl">
+                        <rect key="frame" x="135" y="107" width="52" height="51"/>
+                        <state key="normal" image="autoTreas.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="xVA-jk-tM9"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHy-LC-GAV">
+                        <rect key="frame" x="247" y="107" width="51" height="51"/>
+                        <state key="normal" image="centerMore.png"/>
+                        <connections>
+                            <action selector="ItemBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7IY-7D-Glm"/>
+                        </connections>
+                    </button>
+                </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="couponBtn" destination="7iz-96-287" id="rwO-u5-KbL"/>
+                <outlet property="moreBtn" destination="pHy-LC-GAV" id="2KT-oH-cyK"/>
+                <outlet property="myBillBtn" destination="vGA-bE-9db" id="JMY-BE-pJ1"/>
+                <outlet property="myGarageBtn" destination="eaa-5S-85t" id="Glv-g1-8zY"/>
+                <outlet property="orgQueryBtn" destination="zEz-5P-a5p" id="bIB-4o-Q6P"/>
+                <outlet property="treasureBtn" destination="82L-By-RTl" id="5nE-DQ-YQL"/>
+            </connections>
+            <point key="canvasLocation" x="385" y="361"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="addCar.png" width="51" height="51"/>
+        <image name="autoTreas.png" width="52" height="51"/>
+        <image name="centerMore.png" width="51" height="51"/>
+        <image name="coupons.png" width="51" height="51"/>
+        <image name="myBill.png" width="51" height="51"/>
+        <image name="orgSel.png" width="51" height="51"/>
+    </resources>
 </document>
